dispatchrouter/src/main/fabric8/dispatch-router-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  selector:
    name: ${project.artifactId}
  template:
    metadata:
      labels:
        app: hono
        capability: router
        name: ${project.artifactId}
    spec:
      containers:
      - image: eclipsehono/dispatch-router:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        - containerPort: 5673
          protocol: TCP
        args:
          - /usr/sbin/qdrouterd
          - -c
          - /etc/hono/qdrouter/qdrouterd.json
