dispatchrouter/src/main/fabric8/dispatch-router-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono
  name: ${project.artifactId}
spec:
  ports:
  - name: amqps
    port: 15761
    protocol: TCP
    targetPort: 5671
  - name: amqp
    port: 15672
    protocol: TCP
    targetPort: 5672
  - name: internal
    port: 5673
    protocol: TCP
    targetPort: 5673
  selector:
    capability: router
