dispatchrouter/src/main/fabric8/dispatch-router-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  to:
    kind: Service
    name: ${project.artifactId}-ext
  port:
    targetPort: amqps
  tls:
    termination: passthrough
